# src/routes/coreAccountDelegations.js
@@ -7,6 +7,7 @@ const {
   getCoreAccountDelegationsDataByAccount,
   getAllCoreAccountDelegationsData,
   getUniqueStakersSummaryStats,
+  getDailyNewUniqueStakers,
 } = require('../services/coreAccountDelegationsService');
 const { CHAINS } = require('../helpers');
 
@@ -100,6 +101,31 @@ router.get('/cumulative-unique-stakers/summary/:chain?', async (req, res) => {
   } catch (error) {
     console.error('Error in /tvl/summary route:', error);
     res.status(500).json({ error: error.message });
+  }
+});
+
+router.get('/daily-new-unique-stakers/:chain', async (req, res) => {
+  try {
+    const { chain } = req.params;
+
+    if (!chain) {
+      return res.status(400).json({ error: "Chain parameter is required" });
+    }
+
+    if (!CHAINS.includes(chain)) {
+      return res.status(400).json({ error: "Invalid chain parameter" });
+    }
+
+    const result = await getDailyNewUniqueStakers(chain);
+
+    if (!result.length) {
+      return res.status(404).send('Daily new unique stakers data not found');
+    }
+
+    return res.json(result);
+  } catch (error) {
+    console.error('Error in /daily-new-unique-stakers route:', error);
+    return res.status(500).json({ error: error.message });
   }
 });
 
